--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@phosphor-icons/react": "^2.1.5",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
   },
